--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -1,5 +1,8 @@
 application:
   appName: sge
+  mail:
+    endereco-remetente: ancine-mailer@basis.com.br
+    nome-remetente: Ancine
 
 spring:
   application:
@@ -26,6 +29,19 @@ spring:
       hibernate.generate_statistics: false
   liquibase:
     change-log: classpath:/config/liquibase/master.xml
-  #        drop-first: true
+    # drop-first: true
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: sapedteste@gmail.com
+    password: sapedteste123
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: true
+          quitwait: false
   server:
     port: 8080
